<resources>

	<string name="app_name">TakeABreak</string> <!-- roadstop? -->
	<string name="menu_settings">Settings</string>
	<string name="add_new">Submit new location</string>
	<string name="credits">Credits</string>
	<string name="icon">Icon</string>
	<string name="map_type">Map Type</string>
	<string name="satellite">Satellite</string>
	<string name="hybrid">Hybrid</string>
	<string name="Map">Map</string>
	<string name="terrain">Terrain</string>
	
	<string name="title_add">Add new points</string>
	<string name="text_add">TakeABreak does not currently support adding new map points through the app
	    right now. However, since the data is provided from OpenStreetMap, you can still do so using an Android OSM editor like Vespucci, or
	    edit OSM on a desktop computer. Please see OSM for more information.</string>
	<string name="get_app_add">Get Vespucci</string>
	<string name="more_info_add">More info</string>
    <string name="close_add">Close</string>
    <string name="show_fountain">Drinking fountains</string>
    <string name="show_toilet">Public restrooms</string>
    <string name="show_restaurant">Restaurants</string>
    <string name="show_rest_warn">May slow down the app.</string>
    <string name="show">Show</string>
    
    <string name="no_net">Cannot connect to the Internet</string>
    <string name="no_net_info">No Wifi or Data connectivity!</string>
    
   <string name="view_on_map">Directions</string>
    
   <string name="cancel">Cancel</string>
    
   <string name="submit">Submit</string>
    
   <string name="next">Next</string>
   
   <string name="add_loading">Working...</string>
   
      <string name="add_failed">Node add failed</string>
      
      <string name="add_success">Node added</string>
    
   <string name="interior">Is Inside</string>
   <string name="addnode_dialog_title">Add a node...</string>  
   <string name="login_dialog_title">OpenStreetMap Login</string>  
   <string name="description">Additional Information</string>
        <string name="str_btn_find">Find</string>
    <string name="hnt_et_location">Enter location</string>
   <string name="choose_one">Choose a type</string>
   
        <string name="opening_hours">Opening hours (If applicable)</string>
        <string name="fees">Fees</string>
        <string name="wheelchair">Wheelchair</string>
        <string name="has_fountain">Also has water fountain</string>
        <string name="sign_out">Sign out</string>
        <string name="sign_out_subtitle">Sign out of OSM if logged in</string>
    
</resources>