<menu xmlns:android="http://schemas.android.com/apk/res/android">
    
      <item
    android:id="@+id/menu_search"
    android:actionViewClass="com.actionbarsherlock.widget.SearchView"
    android:icon="@drawable/ic_action_search"
    android:showAsAction="ifRoom|collapseActionView"
    android:title="Search"/>  
    <item android:id="@+id/menu_settings"
        android:title="@string/menu_settings"
        android:orderInCategory="100"
        android:showAsAction="never" />

    
    <item android:id="@+id/credits" android:showAsAction="never" android:title="@string/credits"></item>
<item
    android:id="@+id/more"
    android:icon="@drawable/ic_menu_mapmode"
    android:showAsAction="always|withText"
    android:title="@string/map_type">
    <menu>
        <item
    android:id="@+id/satellite"
    android:showAsAction="ifRoom|withText"
    android:title="@string/satellite"/>
        <item
    android:id="@+id/hybrid"
    android:showAsAction="ifRoom|withText"
    android:title="@string/hybrid"/>
	<item
	    android:id="@+id/map_only"
	    android:showAsAction="ifRoom|withText"
	    android:title="@string/Map"/>
	<item
    android:id="@+id/terrain"
    android:showAsAction="ifRoom|withText"
    android:title="@string/terrain"/>
        </menu> 
        </item><item android:id="@+id/add_new" android:title="@string/add_new" android:icon="@drawable/ic_menu_add" android:showAsAction="always" android:visible="true"></item>
</menu>
