<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/latlongText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gray"
        android:gravity="center_horizontal"
        android:text="XXXX N XXXXX E"
        android:textColor="#FFFFFF"
        android:textColorHint="@color/holo_blue" />

    <Spinner
        android:id="@+id/spinnerTypeChoice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/description" />

    <CheckBox
        android:id="@+id/insideCheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/interior" />

	<LinearLayout
	    android:id="@+id/toilet_options"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical" >

    <CheckBox
        android:id="@+id/fees"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fees" />

    <CheckBox
        android:id="@+id/wheelchair"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wheelchair" />

    <CheckBox
        android:id="@+id/has_fountain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/has_fountain" />

    <EditText
        android:id="@+id/opening_hours"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/opening_hours"
        android:inputType="textMultiLine" >

        <requestFocus />
    </EditText>
    </LinearLayout>
    <EditText
        android:id="@+id/Descrip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/description"
        android:inputType="textMultiLine" >

    </EditText>

</LinearLayout>
